<resources>
    <string name="app_name">RestoAndroid</string>
    <string name="password">mot de passe</string>
    <string name="Connexion">Connexion</string>
    <string name="Inscription">Inscription</string>
    <string name="email">email</string>
    <string name="Prenom">Prenom</string>
    <string name="Nom">Nom</string>
    <string name="Téléphone">Téléphone</string>
    <string name="mail">mail</string>
    <string name="inscrivez_vous_ici">Inscrivez vous ici</string>
    <string name="liste">Liste des restaurants</string>
    <string name="restaurant_defaut_nom">Nom du restaurant</string>
    <string name="restaurant_defaut_ville">Ville</string>
    <string name="DescriptionRestaurant" />
    <string name="Description">Description</string>
    <string name="Adresse">Adresse</string>
    <string name="Ville">Ville</string>
    <string name="NombrePersonne">nombre de personnes</string>
    <string name="Commentaire">Commentaire</string>
    <string name="Date">Date</string>
    <string name="Heure">heure</string>
    <string name="emplacement">Interieur/exterieur</string>
    <string name="Reservation">réserver</string>
</resources>